k8s/deliveries-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deliveries-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deliveries
  template:
    metadata:
      labels:
        app: deliveries
    spec:
      containers:
        - image: feniksa18/deliveries:2022-12-04-16-29-49
          name: deliveries
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: deliveries
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: deliveries
