k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deliveries-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /delivery(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: deliveries
                port:
                  number: 8080
          - path: /mapDelivery(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: maps
                port:
                  number: 8081
